Implement new-style serialization